[project]
authors = [{name = "Paul Auerbach", email = "paul.auerbach@barkhauseninstitut.org"}]
dependencies = []
name = "computational-rational"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
highway_env = { path = "highway-env", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.4.3,<3"
gymnasium = "==1.2.2"
matplotlib = ">=3.10.8,<4"
pandas = ">=3.0.2,<4"
scipy = ">=1.17.1,<2"
pygame = ">=2.6.1,<3"
